# PolicyLedger

./: .gitignore  ARCHITECTURE_AUDIT.md  Architecture.md  CHECKLIST.md  DEMO_GUIDE.md  DOCUMENTATION_INDEX.md  EXECUTION_LOOP.md  FINAL_SUMMARY.md  FINAL_VALIDATION.md  GCP-QUICKSTART.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_COMPLETE.md  LIVE_TRAINING_GUIDE.md  MODERNIZATION_SUMMARY.md  MULTI_AGENT_GUIDE.md  PRESENTATION_SCRIPT.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  QUICKREF.md  QUICKSTART.md  README.md  README_FIRST.txt  REFACTOR_SUMMARY.md  SYSTEM_DIAGRAM.md  TESTING_GUIDE.md  TEST_CHECKLIST.md  TROUBLESHOOTING.md  checklist.md  cloudbuild.yaml  demo_complete_workflow.py  demo_decentralization.py  demo_ledger.json  demo_ledger.py  demo_parallel_agents.py  demo_parallel_ledger.json  demo_verification.py  examples_phase4.py  firestore.rules  pyproject.toml  setup-gcp.ps1  (+4 more)
backend/: .dockerignore  .env.template  Dockerfile  README.md  demo.py  demo_parallel_ledger.json  ledger.json  main.py  requirements.txt  start.ps1  start_server.py  test_policy.py
backend/tests/: test_consumer.py  test_env.py  (+2 more)
docs/: IMPLEMENTATION_SUMMARY_PHASES_9_10.md  IMPLEMENTATION_SUMMARY_PHASE_11.md  PHASES_4_5_COMPLETE.md  PHASES_9_10_COMPLETE.md  PHASE_11_COMPLETE.md  PHASE_4_ARCHITECTURE.md  PHASE_4_COMPLETE.md  PHASE_4_INDEX.md  PHASE_4_QUICKREF.md  PHASE_4_SUMMARY.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_6_VERIFICATION.md  PHASE_7_COMPLETE.md  PHASE_7_QUICKREF.md  PHASE_8_COMPLETE.md  checklist.md
src/: __init__.py
tests/: test_integration.py  test_verification.py
(+50 files in other folders)
